--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7688,4 +7688,478 @@ button.close {
   }
 }
 
+.margin-top-0 {
+  margin-top: 0px !important;
+}
+
+.margin-right-0 {
+  margin-right: 0px !important;
+}
+
+.margin-bottom-0 {
+  margin-bottom: 0px !important;
+}
+
+.margin-left-0 {
+  margin-left: 0px !important;
+}
+
+.margin-top-5 {
+  margin-top: 5px !important;
+}
+
+.margin-right-5 {
+  margin-right: 5px !important;
+}
+
+.margin-bottom-5 {
+  margin-bottom: 5px !important;
+}
+
+.margin-left-5 {
+  margin-left: 5px !important;
+}
+
+.margin-top-10 {
+  margin-top: 10px !important;
+}
+
+.margin-right-10 {
+  margin-right: 10px !important;
+}
+
+.margin-bottom-10 {
+  margin-bottom: 10px !important;
+}
+
+.margin-left-10 {
+  margin-left: 10px !important;
+}
+
+.margin-top-15 {
+  margin-top: 15px !important;
+}
+
+.margin-right-15 {
+  margin-right: 15px !important;
+}
+
+.margin-bottom-15 {
+  margin-bottom: 15px !important;
+}
+
+.margin-left-15 {
+  margin-left: 15px !important;
+}
+
+.margin-top-20 {
+  margin-top: 20px !important;
+}
+
+.margin-right-20 {
+  margin-right: 20px !important;
+}
+
+.margin-bottom-20 {
+  margin-bottom: 20px !important;
+}
+
+.margin-left-20 {
+  margin-left: 20px !important;
+}
+
+.margin-top-25 {
+  margin-top: 25px !important;
+}
+
+.margin-right-25 {
+  margin-right: 25px !important;
+}
+
+.margin-bottom-25 {
+  margin-bottom: 25px !important;
+}
+
+.margin-left-25 {
+  margin-left: 25px !important;
+}
+
+.margin-top-30 {
+  margin-top: 30px !important;
+}
+
+.margin-right-30 {
+  margin-right: 30px !important;
+}
+
+.margin-bottom-30 {
+  margin-bottom: 30px !important;
+}
+
+.margin-left-30 {
+  margin-left: 30px !important;
+}
+
+.margin-top-35 {
+  margin-top: 35px !important;
+}
+
+.margin-right-35 {
+  margin-right: 35px !important;
+}
+
+.margin-bottom-35 {
+  margin-bottom: 35px !important;
+}
+
+.margin-left-35 {
+  margin-left: 35px !important;
+}
+
+.margin-top-40 {
+  margin-top: 40px !important;
+}
+
+.margin-right-40 {
+  margin-right: 40px !important;
+}
+
+.margin-bottom-40 {
+  margin-bottom: 40px !important;
+}
+
+.margin-left-40 {
+  margin-left: 40px !important;
+}
+
+.margin-top-45 {
+  margin-top: 45px !important;
+}
+
+.margin-right-45 {
+  margin-right: 45px !important;
+}
+
+.margin-bottom-45 {
+  margin-bottom: 45px !important;
+}
+
+.margin-left-45 {
+  margin-left: 45px !important;
+}
+
+.margin-top-50 {
+  margin-top: 50px !important;
+}
+
+.margin-right-50 {
+  margin-right: 50px !important;
+}
+
+.margin-bottom-50 {
+  margin-bottom: 50px !important;
+}
+
+.margin-left-50 {
+  margin-left: 50px !important;
+}
+
+.btn.btn-xxs {
+  padding: 8px 3px;
+  line-height: 0;
+  font-size: 12px;
+  border-radius: 3px;
+}
+
+ul.options {
+  padding: 0;
+  list-style: none;
+  margin: 0;
+}
+
+ul.options li {
+  background: #fff;
+  border: 1px solid #d3e0e9;
+  width: calc(25% - 11px);
+  margin-right: 10px;
+  margin-bottom: 10px;
+  display: inline-block;
+  border-radius: 3px;
+  vertical-align: top;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+  padding: 15px 10px;
+}
+
+ul.options li:nth-child(4n) {
+  margin-right: 0;
+}
+
+ul.options li:nth-last-child(-n+4) {
+  margin-bottom: 0;
+}
+
+ul.options li:hover {
+  background: #f5f5f5;
+}
+
+ul.options li a {
+  color: #444;
+  display: block;
+  text-align: center;
+}
+
+ul.options li a i {
+  font-size: 30px;
+  display: block;
+  margin-bottom: 10px;
+}
+
+ul.options li a span {
+  display: block;
+}
+
+ul.options li a small {
+  margin-top: 5px;
+  font-size: 10px;
+  display: block;
+}
+
+ul.options li a:hover, ul.options li a:focus, ul.options li a:active {
+  text-decoration: none;
+}
+
+#loader {
+  width: 100px;
+  height: 40px;
+  position: relative;
+  display: block;
+  margin: 20px auto 0;
+  text-align: center;
+}
+
+#loader div {
+  width: 20px;
+  height: 20px;
+  background: #363636;
+  border-radius: 50%;
+  position: absolute;
+}
+
+#d1 {
+  -webkit-animation: animate 2s linear infinite;
+  animation: animate 2s linear infinite;
+}
+
+#d2 {
+  -webkit-animation: animate 2s linear infinite -.4s;
+  animation: animate 2s linear infinite -.4s;
+}
+
+#d3 {
+  -webkit-animation: animate 2s linear infinite -.8s;
+  animation: animate 2s linear infinite -.8s;
+}
+
+#d4 {
+  -webkit-animation: animate 2s linear infinite -1.2s;
+  animation: animate 2s linear infinite -1.2s;
+}
+
+#d5 {
+  -webkit-animation: animate 2s linear infinite -1.6s;
+  animation: animate 2s linear infinite -1.6s;
+}
+
+@-webkit-keyframes animate {
+  0% {
+    left: 100px;
+    top: 0;
+  }
+  80% {
+    left: 0;
+    top: 0;
+  }
+  85% {
+    left: 0;
+    top: -20px;
+    width: 20px;
+    height: 20px;
+  }
+  90% {
+    width: 40px;
+    height: 15px;
+  }
+  95% {
+    left: 100px;
+    top: -20px;
+    width: 20px;
+    height: 20px;
+  }
+  100% {
+    left: 100px;
+    top: 0;
+  }
+}
+
+.hive {
+  width: 525px;
+  margin: 0 auto;
+}
+
+.hive .honeycomb {
+  width: 170px;
+  height: 221px;
+  position: relative;
+  display: inline-block;
+  margin-right: 5px;
+  /* Todas as linhas depois da 1 terão uma margin negativa. */
+}
+
+.hive .honeycomb:nth-child(5n-1) {
+  margin-left: 88.4px;
+}
+
+.hive .honeycomb:nth-child(n+3) {
+  margin-top: -76.5px;
+}
+
+.hive .honeycomb .cavity {
+  overflow: hidden;
+  visibility: hidden;
+  -webkit-transform: rotate(120deg);
+  transform: rotate(120deg);
+  cursor: pointer;
+  position: absolute;
+  width: 170px;
+  height: 340px;
+  top: -45px;
+}
+
+.hive .honeycomb .cavity.disabled {
+  cursor: default;
+}
+
+.hive .honeycomb .cavity.disabled .out .in {
+  background: #eee;
+  color: #c2c2c2;
+}
+
+.hive .honeycomb .cavity:not(.disabled) .out .in.selected {
+  background: rgba(153, 0, 0, 0.8);
+}
+
+.hive .honeycomb .cavity:not(.disabled) .out .in.selected:hover, .hive .honeycomb .cavity:not(.disabled) .out .in.selected:focus {
+  background: rgba(153, 0, 0, 0.8);
+}
+
+.hive .honeycomb .cavity:not(.disabled) .out .in:hover, .hive .honeycomb .cavity:not(.disabled) .out .in:focus {
+  background: #898989;
+}
+
+.hive .honeycomb .cavity .out {
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  -webkit-transform: rotate(-60deg);
+  transform: rotate(-60deg);
+}
+
+.hive .honeycomb .cavity .out .in {
+  background: #ccc;
+  overflow: hidden;
+  color: #fff;
+  line-height: 50%;
+  width: 100%;
+  height: 100%;
+  visibility: visible;
+  -webkit-transform: rotate(-60deg);
+  transform: rotate(-60deg);
+  -webkit-transition: all .2s;
+  transition: all .2s;
+}
+
+.hive .honeycomb .cavity .out .in .content {
+  position: relative;
+  display: block;
+  top: 50%;
+  left: 50%;
+  z-index: 9999;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  line-height: 20px;
+  text-align: center;
+}
+
+.hive .honeycomb .cavity .out .in .content strong {
+  font-size: 1.3vw;
+  font-weight: 300;
+  display: block;
+}
+
+.hive .honeycomb .cavity .out .in .content > span {
+  margin-bottom: 10px;
+  margin-top: 15px;
+  display: block;
+}
+
+.hive .honeycomb .cavity .out .in .content > span b {
+  font-size: 0.7vw;
+  margin-bottom: 5px;
+}
+
+.hive .honeycomb .cavity .out .in .content > span p {
+  font-size: 0.6vw;
+  margin: 0;
+}
+
+.inline-block {
+  display: inline-block;
+}
+
+.text-white {
+  color: #fff !important;
+}
+
+.nav-tabs li a {
+  color: #555555;
+}
+
+.tab-content .tab-pane .panel,
+.tab-content .tab-pane .panel-body {
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+
+.modules .module {
+  padding: 15px;
+  display: inline-block;
+  width: calc(50% - 20px);
+  margin-right: 10px;
+  background: #eee;
+  border: 1px solid #ccc;
+}
+
+.modules .module:nth-child(2n) {
+  margin-right: 0;
+  margin-let: 10px;
+}
+
+.modules .module input[type="checkbox"] {
+  margin: 4px 5px 0 0;
+  position: static;
+  float: left;
+  width: 30px;
+}
+
+.modules .module span {
+  float: left;
+  width: calc(100% - 35px);
+}
+
+.modules .module span p {
+  font-size: 80%;
+  margin: 0;
+}
+
 /*# sourceMappingURL=app.css.map */
