--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -7,3 +7,67 @@
 
 // Bootstrap
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+
+@import 'helper';
+@import 'options';
+@import 'loader';
+@import 'hive';
+
+.inline-block {
+    display: inline-block;
+}
+
+.text-white {
+    color: #fff !important;
+}
+
+.nav-tabs {
+    li {
+        a {
+            color: #555555;
+        }
+    }
+}
+
+.tab-content {
+    .tab-pane {
+        .panel,
+        .panel-body {
+            border-top-left-radius: 0;
+            border-top-right-radius: 0;
+        }
+    }
+}
+
+.modules {
+    .module {
+        padding: 15px;
+        display: inline-block;
+        width: calc(50% - 20px);
+        margin-right: 10px;
+        background: #eee;
+        border: 1px solid #ccc;
+
+        &:nth-child(2n) {
+            margin-right: 0;
+            margin-let: 10px;
+        }
+
+        input[type="checkbox"] {
+            margin: 4px 5px 0 0;
+            position: static;
+            float: left;
+            width: 30px;
+        }
+
+        span {
+            float: left;
+            width: calc(100% - 35px);
+
+            p {
+                font-size: 80%;
+                margin: 0;
+            }
+        }
+    }
+}
